feat(api): extend dto models
