# src/api/dtos.ts
@@ -13,9 +13,20 @@ export interface QueryContextDto {
     limit: number;
 }
 
+export interface GetCollectionResponseDto {
+    name: string;
+}
+
+export type SuccessResponseDto = boolean;
+
 export interface FindSimilarRequestDto {
     text: string;
     context: Partial<QueryContextDto>;
+}
+
+export interface FindSimilarResponseDto {
+    payload: Record<string, unknown>;
+    score: number;
 }
 
 export interface EmbedTextRequestDto {
@@ -39,4 +50,13 @@ export interface GenerateTextRequestDto {
     text: string;
     context: Partial<QueryContextDto>;
     options: Partial<GenerateTextOptionsDto>;
+}
+
+export interface GenerateTextResponseDto {
+    choices: {
+        text: string
+    }[];
+    usage: {
+        completionTokens: number
+    };
 }
